Front end info update on index.html

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,9 +12,8 @@
                 <div class="col-md-9">
                     <div class="row">
                         <div class="col-md-5">
-                            <h2 class="footer-heading mb-4">About Us</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam
-                                voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                            <h2 class="footer-heading mb-4" th:text="#{site.about_us}" />
+                            <p th:text="#{site.about_us_msg}" />
                         </div>
                         <div class="col-md-3 ml-auto">
                             <h2 class="footer-heading mb-4">Quick Links</h2>
@@ -29,10 +28,9 @@
                         </div>
                         <div class="col-md-3 footer-social">
                             <h2 class="footer-heading mb-4">Follow Us</h2>
-                            <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                            <a href="https://www.facebook.com/profile.php?id=61550930370143" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                            <a href="https://twitter.com/Wallet_tellaW" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                            <a href="https://www.linkedin.com/in/wallet-tellaw-78246828b/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
                         </div>
                     </div>
                 </div>
