--- a/src/main/resources/templates/user_request_funds.html
+++ b/src/main/resources/templates/user_request_funds.html
@@ -38,22 +38,16 @@
 
 
                 <div class="container">
-                    <h1>List of Users</h1>
+                    <h2 th:text="#{user.request_funds_heading}" />
 
-                    <input type="text" id="searchInput" placeholder="Search by username or name">
+                    <input class="form-control form-control222" type="text" id="searchInput" placeholder="Type here to filter the usernames...">
 
                     <table>
-                        <thead>
-                        <tr>
-                            <th>Username</th>
-<!--                            <th>Name</th>-->
-                            <!-- Add more columns as needed -->
-                        </tr>
-                        </thead>
                         <tbody id="userTableBody">
                         <tr th:each="user : ${users}">
-                            <td th:text="${user.username}">Username</td>
-<!--                            <td th:text="${user.name}">Name</td>-->
+                            <td>
+                                <a th:href="@{/users/{userId}(userId=${user.id})}" th:text="${user.username}">Username</a>
+                            </td>
                             <!-- Add more columns as needed -->
                         </tr>
                         </tbody>
@@ -63,7 +57,6 @@
 
 
             </div>
-
         </div>
     </div>
 </div>
@@ -103,7 +96,6 @@
         }
     });
 </script>
-
 
 </body>
 </html>
