--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1699,6 +1699,13 @@ body:after {
   position: relative;
   overflow: hidden; }
 
+.team-member img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
 .team-member .social {
   position: absolute;
   margin: 0;
