--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -18,7 +18,7 @@
                         <div class="col-md-3 ml-auto">
                             <h2 class="footer-heading mb-4">Quick Links</h2>
                             <ul class="list-unstyled">
-                                <li><a href="#about-section" class="smoothscroll">Terms</a></li>
+                                <li><a th:href="@{/terms}" class="smoothscroll">Terms</a></li>
                                 <li><a href="#about-section" class="smoothscroll">Policy</a></li>
                                 <li><a href="#about-section" class="smoothscroll">About Us</a></li>
                                 <li><a href="#services-section" class="smoothscroll">Services</a></li>
