Implemented working site contact form from index and /contact

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -20,10 +20,10 @@
                             <ul class="list-unstyled">
                                 <li><a th:href="@{/terms}" class="smoothscroll">Terms</a></li>
                                 <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                                <li><a href="#about-section" class="smoothscroll">About Us</a></li>
+                                <li><a th:href="@{/about}" class="smoothscroll">About Us</a></li>
                                 <li><a href="#services-section" class="smoothscroll">Services</a></li>
                                 <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                                <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                                <li><a th:href="@{/contact}" class="smoothscroll">Contact Us</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 footer-social">
