--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -781,12 +781,11 @@
             </div>
         </div>
         <div class="row mb-5">
-
-
             <div class="col-md-4 text-center">
                 <p class="mb-4">
-                    <span class="icon-room d-block h2 text-primary"></span>
-                    <span>30, ul. "Krastyu Rakovski" str, 1729 Sofia</span>
+                    <a href="https://www.google.com/maps/search/30,+ul.+%22Krastyu+Rakovski%22+str,+1729+Sofia/@42.6499324,23.376635,17z/data=!3m1!4b1?entry=ttu">
+                        <span class="icon-room d-block h2 text-primary"></span>
+                        <span>30, ul. "Krastyu Rakovski" str, 1729 Sofia</span></a>
                 </p>
             </div>
             <div class="col-md-4 text-center">
@@ -804,57 +803,39 @@
         </div>
         <div class="row">
             <div class="col-md-12 mb-5">
-
-
-                <form action="#" class="p-5 bg-white">
-
+                <form th:action="@{/contact}" th:object="${contactForm}" method="post" class="p-5 bg-white">
                     <h2 class="h4 text-black mb-5">Contact Form</h2>
-
                     <div class="row form-group">
                         <div class="col-md-6 mb-3 mb-md-0">
-                            <label class="text-black" for="fname">First Name</label>
-                            <input type="text" id="fname" class="form-control">
+                            <input type="text" th:field="*{firstName}" class="form-control" placeholder="First Name">
                         </div>
                         <div class="col-md-6">
-                            <label class="text-black" for="lname">Last Name</label>
-                            <input type="text" id="lname" class="form-control">
+                            <input type="text" th:field="*{lastName}" class="form-control" placeholder="Last Name">
                         </div>
                     </div>
-
                     <div class="row form-group">
-
                         <div class="col-md-12">
-                            <label class="text-black" for="email">Email</label>
-                            <input type="email" id="email" class="form-control">
+                            <input type="email" th:field="*{email}" class="form-control" placeholder="Your Email">
                         </div>
                     </div>
-
                     <div class="row form-group">
-
                         <div class="col-md-12">
-                            <label class="text-black" for="subject">Subject</label>
-                            <input type="submit" id="subject" class="form-control">
+                            <input type="text" th:field="*{subject}" class="form-control" placeholder="Subject">
                         </div>
                     </div>
-
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <label class="text-black" for="message">Message</label>
-                            <textarea name="message" id="message" cols="30" rows="7" class="form-control"
+                            <textarea th:field="*{message}" cols="30" rows="7" class="form-control"
                                       placeholder="Write your notes or questions here..."></textarea>
                         </div>
                     </div>
-
                     <div class="row form-group">
                         <div class="col-md-12">
                             <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
                         </div>
                     </div>
-
-
                 </form>
             </div>
-
         </div>
     </div>
 </section>
