--- a/src/main/resources/templates/site/contact.html
+++ b/src/main/resources/templates/site/contact.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/contact.css}"/>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -41,11 +42,16 @@
 
             <div class="col-md-4 text-center">
                 <p class="mb-4">
-                    <a href="https://www.google.com/maps/search/30,+ul.+%22Krastyu+Rakovski%22+str,+1729+Sofia/@42.6499324,23.376635,17z/data=!3m1!4b1?entry=ttu">
+                    <a href="https://www.google.com/maps/place/%D0%A2%D0%B5%D0%BB%D0%B5%D1%80%D0%B8%D0%BA+%D0%90%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D1%8F/@42.6500105,23.3744217,17z/data=!3m1!4b1!4m6!3m5!1s0x40aa86940322e46b:0x9dcf2a89d173b821!8m2!3d42.6500067!4d23.3792926!16s%2Fg%2F119vp8h9s?entry=ttu">
                         <span class="icon-room d-block h2 text-primary"></span>
-                        <span>30, ul. "Krastyu Rakovski" str, 1729 Sofia</span></a>
+                        <span>30, ul. "Krastyu Rakovski" str, 1729 Sofia</span>
+                    </a>
                 </p>
+                <div class="hover-image">
+                    <img th:src="@{/images/contact_location.png}" alt="Image" class="img-fluid">
+                </div>
             </div>
+
             <div class="col-md-4 text-center">
                 <p class="mb-4">
                     <span class="icon-phone d-block h2 text-primary"></span>
